adding logo to nav

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,18 @@
+.logo{
+    height: 40px;
+    margin-top: 20px;
+}
+
 /* Add a black background color to the top navigation */
-.topnav {
+.navbar {
+    height: 100px;
     background-color: #fff;
     overflow: hidden;
+    font-family: 'arial';
   }
   
   /* Style the links inside the navigation bar */
-  .topnav a {
+  .navbar a {
     color: #000;
     text-align: center;
     padding: 14px 16px;
@@ -14,12 +21,13 @@
   }
   
   /* Change the color of links on hover */
-  .topnav a:hover {
+  .navbar a:hover {
     color: #5E8932;
   }
   
   /* Add a color to the active/current link */
-  .topnav a.active {
+  .navbar a.active {
     background-color: #fff;
     color: #5E8932;
   }
+
