--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,19 @@
     color: #5E8932;
   }
 
+  /*home page grid */
+  .container {  display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "Photo Text ."
+      ". . ."
+      ". . .";
+  }
+  
+  .Photo { grid-area: Photo; }
+  
+  .Text { grid-area: Text; }
+  
