--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,14 @@
     margin-top: 20px;
 }
 
+.button{
+    background-color: #5E8932;
+    color: #fff;
+    border-radius: 8px;
+    padding: 15px;
+    filter: drop-shadow(5px 10px 4px rgba(0, 0, 0, 0.4));
+}
+
 /* Add a black background color to the top navigation */
 .navbar {
     height: 100px;
@@ -41,9 +49,15 @@
       "Photo Text ."
       ". . ."
       ". . .";
+    margin: auto;
+    text-align: center;
   }
   
-  .Photo { grid-area: Photo; }
+  .Photo { 
+      grid-area: Photo;
+    }
   
-  .Text { grid-area: Text; }
+  .Text { grid-area: Text;
+
+    }
   
