--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 20px;
   }
   
   /* Change the color of links on hover */
@@ -41,6 +41,8 @@
 
   .floatright{
       float: right;
+      margin-top: 25px;
+      margin-right: 20px;
   }
   /*home page grid */
   .container {  display: grid;
