--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ body{
     font-family: 'open sans';
 }
 
+#contact{
+    background-color: #b0c49c;
+    height: 100vh;
+}
+
 .footer{
     background-color: #5E8932;
     text-align: center;
@@ -26,6 +31,17 @@ body{
     border-radius: 8px;
     padding: 15px;
     filter: drop-shadow(5px 10px 4px rgba(0, 0, 0, 0.4));
+}
+
+.contactbtn{
+    background-color: #5E8932;
+    color: #fff;
+    border-radius: 8px;
+    padding: 15px;
+    width: 477px;
+    height: 88px;
+    filter: drop-shadow(5px 10px 4px rgba(0, 0, 0, 0.4));
+    font-size: 40px;
 }
 
 /* Add a black background color to the top navigation */
