--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,10 @@ body{
     filter: drop-shadow(5px 10px 4px rgba(0, 0, 0, 0.4));
     font-size: 40px;
 }
-
+.contactimg{
+    float: right;
+    margin-top: 300px;
+}
 /* Add a black background color to the top navigation */
 .navbar {
     height: 100px;
