--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,8 @@ body{
     height: 88px;
     filter: drop-shadow(5px 10px 4px rgba(0, 0, 0, 0.4));
     font-size: 40px;
+    margin-top: 300px;
+    margin-left: 250px;
 }
 .contactimg{
     float: right;
