--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,19 @@ body{
     font-family: 'open sans';
 }
 
+.aboutbtn{
+    background-color: #5E8932;
+    color: #fff;
+    border-radius: 8px;
+    padding: 15px;
+    filter: drop-shadow(5px 10px 4px rgba(0, 0, 0, 0.4));
+    width: 200px;
+}
+
+.emptydesk{
+    margin-left: 25vw;
+}
+
 .footer{
     background-color: #5E8932;
     text-align: center;
@@ -118,7 +131,7 @@ body{
         grid-template-areas:
           "The-Team The-Team The-Team"
           "Dan . Hanna"
-          ". . .";
+          "teambottom teambottom teambottom";
       }
       
       .Dan { 
@@ -135,7 +148,12 @@ body{
           text-align: center;
           height: 100px;
         }
+
+        .teambottom{
+            grid-area: teambottom;
+        }
       
+
   
     /* media queries for tablet*/
     @media screen and (min-width: 768px) and (max-width: 991px) {
