--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,16 @@ body{
         font-size: 25px;
     }
 
+    .topgreen{
+        width: 100vh;
+    }
+
+    .webdevwords{
+        background: url(./img/webdevgreen.svg);
+        background-size: cover;
+        height: 300px;
+        width: 250px;
+    }
   
     /* media queries for tablet*/
     @media screen and (min-width: 768px) and (max-width: 991px) {
