--- a/styles.css
+++ b/styles.css
@@ -3,22 +3,36 @@ body{
 }
 
 .devpage {  display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
+      "devtop devtop devtop"
       "webdev webdev webdev"
       "webapp webapp webapp"
-      "mobiledev mobiledev mobiledev";
+      "mobile mobile mobile"
+      "devbot devbot devbot";
   }
   
-  .webdev { grid-area: webdev;
- }
+  .devbot { 
+      grid-area: devbot;
+      background: url(./img/botgreen.svg);
+      background-size: contain;
+    }
+  
+  .devtop { 
+      grid-area: devtop; 
+      background: url(./img/topgreen.svg);
+      background-size: contain;
+    }
+  
+  .webdev { grid-area: webdev; }
   
   .webapp { grid-area: webapp; }
   
-  .mobiledev { grid-area: mobiledev; }
+  .mobile { grid-area: mobile; }
+  
   
 
 .footer{
@@ -111,14 +125,20 @@ body{
         font-size: 25px;
     }
 
-    .topgreen{
-        width: 100vh;
-    }
-
     .webdevwords{
         height: 300px;
         width: 400px;  
         margin-top: -300px;
+        margin-left: 200px;
+    }
+
+    .webdevwords h2{
+        text-align: center;
+    }
+
+    .webdevimg{
+        height: 400px;
+        float: right;
     }
 
     .greenwebdev{
