--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body{
     font-family: 'open sans';
     color:#fff;
     font-weight: bold;
-    position: absolute;
+    position: fixed;
     bottom: 0;
 }
 
@@ -106,6 +106,9 @@ body{
       margin-right: 20px;
   }
   /*home page grid */
+  #home{
+      height: 100vh;
+  }
   .container {  display: grid;
     justify-content: center;
     align-content: center;
