--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,10 @@ body{
       margin-top: 25px;
       margin-right: 20px;
   }
+
+  #home{
+      height: 100vh;
+  }
   /*home page grid */
   .container {  display: grid;
     justify-content: center;
@@ -173,9 +177,13 @@ body{
         font-size: 25px;
     }
 
+    #team{
+        height: 100vh;
+    }
+
     .aboutpg {  display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto auto auto;
         gap: 0px 0px;
         grid-auto-flow: row;
         grid-template-areas:
@@ -201,6 +209,7 @@ body{
 
         .teambottom{
             grid-area: teambottom;
+            margin-top: -100px;
         }
       
 
