--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ body{
     font-family: 'open sans';
 }
 
+.topgreen{
+    width: 100vw;
+}
+
 .devpage {  display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 320px 1fr 1fr 1fr 320px;
@@ -23,10 +27,9 @@ body{
   
   .devtop { 
       grid-area: devtop; 
-      background-image: url(./img/topgreen.svg);
       height: 100px;
-      background-position: 50% 50%;
     }
+
   
   .webdev { grid-area: webdev; }
   
@@ -213,7 +216,6 @@ body{
         font-size: 25px;
     }
 
-<<<<<<< HEAD
     .webdevwords{
         height: 300px;
         width: 400px;  
@@ -246,7 +248,6 @@ body{
         width: 300px;
         margin-left: 1400px;
     }
-=======
     #team{
         height: 100vh;
     }
@@ -285,7 +286,6 @@ body{
         }
       
 
->>>>>>> origin
   
     /* media queries for tablet*/
     @media screen and (min-width: 768px) and (max-width: 991px) {
