--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@ body{
     width: 100vw;
 }
 
+.botgreen{
+    width: 100vw;
+}
+
 .devpage {  display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 320px 1fr 1fr 1fr 320px;
