--- a/styles.css
+++ b/styles.css
@@ -15,23 +15,24 @@ body{
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
-    grid-template-areas:
-      "devtop devtop devtop devtop"
-      "webdev webdev webdev webdev"
-      "webapp webapp webapp webapp"
-      "mobiledev mobiledev mobiledev mobiledev"
-      "devbot devbot devbot devbot";
   }
   
-  .devtop { grid-area: devtop; }
+  .devbot { grid-area: 5 / 1 / 6 / 5; }
   
-  .devbot { grid-area: devbot; }
+  .webdev { grid-area: 2 / 1 / 3 / 5; }
   
-  .webdev { grid-area: webdev; }
+  .devtop { grid-area: 1 / 1 / 2 / 5; }
   
-  .webapp { grid-area: webapp; }
+  .webphoto { grid-area: 2 / 3 / 3 / 5; }
   
-  .mobiledev { grid-area: mobiledev; }
+  .appphoto { grid-area: 3 / 1 / 4 / 3; }
+  
+  .webapp { grid-area: 3 / 3 / 4 / 5; }
+  
+  .mobiledev { grid-area: 4 / 1 / 5 / 3; }
+  
+  .mobilephoto { grid-area: 4 / 3 / 5 / 5; }
+  
   
 .aboutbtn{
     background-color: #5E8932;
