--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,15 @@ body{
     font-family: 'open sans';
 }
 
+
 .aboutbtn{
     background-color: #5E8932;
     color: #fff;
     border-radius: 8px;
     padding: 15px;
     filter: drop-shadow(5px 10px 4px rgba(0, 0, 0, 0.4));
-    width: 200px;
+    width: 250px;
+    font-family: arial;
 }
 
 .emptydesk{
@@ -185,6 +187,10 @@ body{
         height: 100vh;
     }
 
+    .aboutpg a{
+        text-decoration: none;
+        font-size: 15px;
+    }
     .aboutpg {  display: grid;
         grid-template-columns: auto auto auto;
         grid-template-rows: auto auto auto;
