--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,25 @@ body{
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     gap: 0px 0px;
     grid-auto-flow: row;
+    font-family: 'arial';
   }
+
+  .devpage p{
+     text-align: left;
+  }
+
+  .devpage h{
+      text-align: center;
+  }
+
   
   .devbot { grid-area: 5 / 1 / 6 / 5; }
   
   .webdev { grid-area: 2 / 1 / 3 / 5; }
   
-  .devtop { grid-area: 1 / 1 / 2 / 5; }
+  .devtop { grid-area: 1 / 1 / 2 / 5; 
+    height: 10vh;
+}
   
   .webphoto { grid-area: 2 / 3 / 3 / 5; }
   
@@ -192,10 +204,11 @@ body{
     }
 
     .webdevwords{
-        height: 300px;
-        width: 400px;  
-        margin-top: -300px;
-        margin-left: 200px;
+        text-align: center;
+        width: 250px;
+        margin-top: -280px;
+        margin-left: 300px;
+        line-height: 25px;
     }
 
     .devpage h2{
@@ -203,10 +216,12 @@ body{
     }
 
     .webdevimg{
-        float: right;
-        margin-top: -340px;
-        padding-right: 300px;
         height: 500px;
+    }
+
+    .greenwebdev{
+        height: 400px;
+        margin-left: 400px;
     }
 
 
