adding is active toggle function to button

--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,10 @@ justify-self: center;}
     margin-top: 300px;
     margin-left: 250px;
 }
+
+.contactbtn:active{
+    background-color: #000;
+}
 .contactimg{
     float: right;
     margin-top: 300px;
