--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'open sans';
+    width: 100vw;
 }
 
 
@@ -29,12 +30,14 @@ body{
   }
 
   
-  .devbot { grid-area: 5 / 1 / 6 / 5; }
+  .devbot { grid-area: 5 / 1 / 6 / 5; 
+width: 100vw;}
   
   .webdev { grid-area: 2 / 1 / 3 / 5; }
   
   .devtop { grid-area: 1 / 1 / 2 / 5; 
     height: 10vh;
+    width: 100vw;
 }
   
   .webphoto { grid-area: 2 / 3 / 3 / 5; 
