--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,10 @@ body{
     width: 100vw;
 }
 
-.devpage {  display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+.devpage {  
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     gap: 0px 0px;
     grid-auto-flow: row;
     font-family: 'arial';
@@ -30,14 +31,28 @@ body{
   }
 
   
-  .devbot { grid-area: 5 / 1 / 6 / 5; 
-width: 100vw;}
+.devbot { 
+  grid-area: 5 / 1 / 6 / 5; 
+  height: 35vh;
+  width: 100vw;
+  background-image: url('./img/botgreen.svg');
+  background-repeat: no-repeat;
+  background-size:auto;
+  background-position: top;
+}
   
-  .webdev { grid-area: 2 / 1 / 3 / 5; }
+.webdev { 
+  grid-area: 2 / 1 / 3 / 5; 
+}
   
-  .devtop { grid-area: 1 / 1 / 2 / 5; 
-    height: 10vh;
-    width: 100vw;
+.devtop { 
+  grid-area: 1 / 1 / 2 / 5; 
+  height: 35vh;
+  width: 100vw;
+  background-image: url('./img/topgreen.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: hidden;
 }
   
   .webphoto { grid-area: 2 / 3 / 3 / 5; 
@@ -196,26 +211,24 @@ input{
 
   
   .floatright{
-      float: right;
-      margin-top: 25px;
-      margin-right: 20px;
+    float: right;
+    margin-top: 25px;
   }
 
   #home{
-      height: 100vh;
+    height: 100vh;
   }
   /*home page grid */
   #home{
-      height: 100vh;
+    height: 100vh;
   }
-  .container {  display: grid;
+  .container {  
+    display: grid;
     justify-content: center;
     align-content: center;
     font-family: arial;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 0px 0px;
     grid-template-areas:
       "Photo Text Text"
@@ -255,7 +268,8 @@ input{
         text-align: center;
     }
 
-  .Text { grid-area: Text;
+  .Text { 
+    grid-area: Text;
     align-items:center;
     text-align: center;
     margin-top: 25vh;
