using keyframes and classes to animate instead of library

--- a/styles.css
+++ b/styles.css
@@ -376,6 +376,32 @@ input {
 }
 
 
+/*animation on scroll*/
+.reveal {
+    position: relative;
+    opacity: 0;
+  }
+  
+  .reveal.active {
+    opacity: 1;
+  }
+
+  .active.fade-left {
+    animation: fade-left 1s ease-in;
+  }
+
+  @keyframes fade-left {
+    0% {
+      transform: translateX(-100px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+
 
 /* media queries for tablet*/
 @media screen and (min-width: 768px) and (max-width: 991px) {}
