editing input to textarea and styling for message box

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,10 @@ input{
 
 #message{
     height: 150px;
+    background-color: #b0c49c;
+    width: 300px;
+    border: 1px solid black;
+    font-family: arial;
 }
 
 .contactbtn:hover{
