--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,7 @@ input {
     font-size: 20px;
 }
 
+
 /* Change the color of links on hover */
 .navbar a:hover {
     color: #5E8932;
@@ -213,7 +214,7 @@ input {
 }
 
 
-.floatright {
+#floatright {
     float: right;
     margin-top: 25px;
     margin-right: 20px;
@@ -420,9 +421,9 @@ input {
     }
   }
 
-
 /* media queries for tablet*/
 @media screen and (min-width: 768px) and (max-width: 991px) {}
 
 /*media querie for phone*/
-@media screen and (max-width: 767px) {}
+@media screen and (max-width: 767px) {
+}
