--- a/styles.css
+++ b/styles.css
@@ -426,17 +426,24 @@ input {
 
 /*media querie for phone*/
 @media screen and (max-width: 767px) {
-    .container {  display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: auto auto;
+    #home{
+        width: 100vw;
+    }
+    .container {
+        height: 100vh;
+        width: 100vw;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
         grid-template-areas:
-          "text"
-          "photo"
+          "text text"
+          "text text"
+          "photo photo"
       }
       
-      .text { 
+      .text{ 
           grid-area: text;
-          width: 300px;
+          width: 100vw;
          }
       
       .photo { 
