--- a/styles.css
+++ b/styles.css
@@ -426,15 +426,12 @@ input {
 
 /*media querie for phone*/
 @media screen and (max-width: 767px) {
-    #home{
-        width: 100vw;
-    }
     .container {
         height: 100vh;
         width: 100vw;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto auto;
         grid-template-areas:
           "text text"
           "text text"
@@ -444,7 +441,12 @@ input {
       .text{ 
           grid-area: text;
           width: 100vw;
-         }
+        }
+
+        .text h1{
+            width: 100px;
+        }
+
       
       .photo { 
           grid-area: photo;
