--- a/styles.css
+++ b/styles.css
@@ -542,6 +542,7 @@ input {
 
     #home{
         width: 100vw;
+        display: none;
     }
     .container {
         height: 100vh;
@@ -566,15 +567,7 @@ input {
         }
       
     .Photo { 
-        grid-area: photo;
-    }      
-
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
-        grid-template-areas:
-          "text text"
-          "text text"
-          "photo photo"
+        grid-area: photo; 
     }
       
     .text{ 
@@ -593,4 +586,100 @@ input {
         'Dan'
         'Hanna'
     }
+
+    .projectpg {  display: grid;
+        grid-template-columns: auto ;
+        grid-template-rows: auto auto auto auto auto auto;
+        gap: 0px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+          "projtop"
+          "proj1"
+          "proj2" 
+          "proj3"
+          "proj4"
+          "proj5"
+          "proj6"
+          "projbot";
+      }
+      
+      .projtop { 
+          grid-area: projtop;
+          text-align: center;
+          height: 100px; 
+      }
+      
+      .placeholder{
+          width: 300px;
+          height: 300px;
+      }
+      .placeholder:hover{
+          width: 500px;
+          display: none;
+      }
+      
+      .placeholder:hover +.projinfo{
+          display: block;
+          background-color: #b0c49c;
+      }
+      
+      .projinfo{
+          padding: 5px;
+          text-align: center;
+          display: none;
+          font-family: arial;
+          width: 300px;
+          color: black;
+          height: 300px;
+      }
+
+      .projinfo{
+        padding: 5px;
+        text-align: center;
+        display: none;
+        font-family: arial;
+        width: 300px;
+        color: black;
+        height: 300px;
+    }
+    
+    .proj1 { 
+        grid-area: proj1;
+        justify-self: center;
+    }
+    
+    .proj2 { 
+        grid-area: proj2;
+        justify-self: center;
+     }
+    
+    .proj3 { 
+        grid-area: proj3;
+        justify-self: center;   
+     }
+    
+    .proj4 { 
+        grid-area: proj4;
+        justify-self: center;
+     }
+    
+    .proj5 { 
+        grid-area: proj5;
+        justify-self: center;
+     }
+    
+    .proj6 { grid-area: proj6;
+        justify-self: center;
+    }
+    
+    .projbot { 
+        grid-area: projbot;
+        margin-top: -80px;
+    }
+
+    .projppl{
+        width: 350px;
+        margin-left: 35px;
+    }
+
 }
