editing navbar css to float right

--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,6 @@ body {
 
 .logo {
     height: 40px;
-    margin-top: 20px;
 }
 
 .button {
@@ -207,6 +206,7 @@ input {
     background-color: #fff;
     overflow: hidden;
     font-family: 'open sans';
+    float: right;
 }
 
 /* Style the links inside the navigation bar */
@@ -231,7 +231,7 @@ input {
 }
 
   .floatright{
-    float: right;
+    float: right !important;
     margin-top: 25px;
   }
 
