--- a/styles.css
+++ b/styles.css
@@ -200,6 +200,13 @@ input {
     margin-top: -100px;
 }
 
+.menu {
+    display: block;
+}
+
+/*.menu li {
+    float: left;
+}*/
 
 /* Add a black background color to the top navigation */
 .navbar {
@@ -219,6 +226,14 @@ input {
     font-size: 20px;
 }
 
+.navbar li {
+    display: inline;
+}
+
+.navbar ul {
+    list-style: none;
+}
+
 
 /* Change the color of links on hover */
 .navbar a:hover {
@@ -236,14 +251,11 @@ input {
     margin-top: 25px;
   }
 
-  #home{
-    height: 89vh;
-  }
   /*home page grid */
   #home{
     height: 89vh;
   }
-  .container {  
+.container {  
 
     display: grid;
     justify-content: center;
@@ -260,6 +272,10 @@ input {
     grid-area: Photo;
     justify-content: center;
     align-content: center;
+}
+
+.side-menu {
+    display: none;
 }
 
 .smplant {
@@ -586,6 +602,89 @@ input {
         display: none;
     }
 
+    .header{
+        position: sticky;
+        top: 0;
+        width: 100%;
+        z-index: 9;
+    }
+
+    .logo {
+        height: 35px;
+        width: 180px;
+    }
+
+    .navbar {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        overflow: hidden;
+    }
+
+    .menu a {
+        display: block;
+        padding: 30px;
+    }
+
+    .menu li {
+        display: block;
+    }
+
+    .navbar {
+        max-height: 0;
+        transition: max-height .5s ease-out;
+    }
+
+    .hamb{
+        cursor: pointer;
+        float: right;
+        padding: 20px 40px;
+    }
+    .hamb-line {
+        background: #000;
+        display: block;
+        height: 2px;
+        position: relative;
+        width: 24px;
+    
+    }
+
+    .hamb-line::before,
+    .hamb-line::after{
+        background: #000;
+        content: '';
+        display: block;
+        height: 100%;
+        position: absolute;
+        transition: all .2s ease-out;
+        width: 100%;
+    }
+
+    .hamb-line::before{
+        top: 5px;
+    }
+    .hamb-line::after{
+        top: -5px;
+    }
+    
+    .side-menu {
+        display: none;
+    }
+
+    .side-menu:checked ~ nav{
+        max-height: 50%;
+    }
+    .side-menu:checked ~ .hamb .hamb-line {
+        background: transparent;
+    }
+    .side-menu:checked ~ .hamb .hamb-line::before {
+        transform: rotate(-45deg);
+        top:0;
+    }
+    .side-menu:checked ~ .hamb .hamb-line::after {
+        transform: rotate(45deg);
+        top:0;
+    }
 
     #home{
         width: 100vw;
